add: 三数之和